# breakout-opengl

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: context.c.0E91A5CAEFD40903.idx  egl_context.c.BCE9F2F611CAC997.idx  glad.c.18F7DEBF3C2DF1A6.idx  glad.h.2DA23009F4F0931E.idx  glfw3.h.D382D4F51138CC7F.idx  glfw3native.h.545CA05AAA4F5CA7.idx  init.c.6A0D37A514676BC3.idx  input.c.1F144E6B0A4C2FA3.idx  internal.h.3B25BF5EA9840EB9.idx  khrplatform.h.CBFA69B7BE5A46A1.idx  main.cpp.9F16F4FC1145A00B.idx  mappings.h.CD5222D464796DE5.idx  monitor.c.021C7387CB499AB9.idx  null_init.c.5736A30EAF95E0C8.idx  null_joystick.c.7DAACA27A81CACEC.idx  null_joystick.h.9856235DE66ADE3C.idx  null_monitor.c.EDE91160FA5CBABB.idx  null_platform.h.018FC28CF39C1E05.idx  null_window.c.AFF5EDEEA2661A23.idx  osmesa_context.c.00A42EAA00DB202D.idx  platform.c.923E917835C420F6.idx  platform.h.2F607E604B584673.idx  vulkan.c.2A1BB1BE618DD5AC.idx  wgl_context.c.02392F2FEC367C2D.idx  win32_init.c.B6C45CEE3CF1A0A5.idx  win32_joystick.c.77C7EE872A89789D.idx  win32_joystick.h.178C61E1400212C1.idx  win32_module.c.9E0E9D84E2D2ADF2.idx  win32_monitor.c.6F645FCA24C2BA95.idx  win32_platform.h.37F337A9FBAA7243.idx  win32_thread.c.EC220771D8DDF5CE.idx  win32_thread.h.FD6D9460CF772483.idx  win32_time.c.8DE3395E1ADD8026.idx  win32_time.h.FBAA903D39DC85B4.idx  win32_window.c.5DBB777138FBE8F8.idx  window.c.E3BC27B0C91857EE.idx
src/: Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.h  main.cpp
